# pernix-lang

./: .gitattributes  .gitignore  CONVENTION.md  Cargo.toml  LICENSE  README.md  main  old_test.rs  out  pernix_syntax_2.pnx  plan.md  program  rust-toolchain.toml  rustfmt.toml  sample.pnx  syntax.pnx  tess.pnx  test  test.pnx  test.rs  test.txt
compiler/driver/: Cargo.toml
compiler/driver/src/: argument.rs  diagnostic.rs  lib.rs  llvm.rs  progress.rs  term.rs
compiler/e2e/: Cargo.toml
compiler/e2e/test/run/: mod.rs
compiler/e2e/test/snapshot/: build.rs  mod.rs
compiler/main/: Cargo.toml
compiler/main/src/: main.rs
compiler/pernixc/: Cargo.toml
compiler/pernixc/src/: main.rs  printing.rs
compiler/pernixc_arena/: Cargo.toml
compiler/pernixc_arena/src/: arbitrary.rs  lib.rs  state.rs
compiler/pernixc_base/: Cargo.toml
compiler/pernixc_base/src/: diagnostic.rs  extension.rs  handler.rs  lib.rs  log.rs  source_file.rs
compiler/pernixc_base/src/log/: formatting.rs
compiler/pernixc_base/src/source_file/: tests.rs
compiler/pernixc_borrow_checker/: Cargo.toml
compiler/pernixc_borrow_checker/src/: cache.rs  check.rs  diagnostic.rs  invalidate.rs  lib.rs  liveness.rs  local_region_generator.rs  subset.rs  transform.rs
compiler/pernixc_builder/: Cargo.toml
compiler/pernixc_builder/src/: accessibility.rs  build.rs  builder.rs  check.rs  diagnostic.rs  extern_function_check.rs  fields.rs  function.rs  function_signature.rs  generic_parameters.rs  implementation.rs  implementation_coherence.rs  ir.rs  lib.rs  occurrences.rs  reflector.rs  test.rs  type_alias.rs  type_system.rs  utility.rs  variance_map.rs  variances.rs  variant.rs  where_clause.rs  where_clause_check.rs
compiler/pernixc_builder/src/extern_function_check/: diagnostic.rs  test.rs
compiler/pernixc_builder/src/fields/: diagnostic.rs  test.rs
compiler/pernixc_builder/src/function/: test.rs
compiler/pernixc_builder/src/generic_parameters/: diagnostic.rs  test.rs
compiler/pernixc_builder/src/implementation_coherence/: diagnostic.rs  test.rs
compiler/pernixc_builder/src/occurrences/: diagnostic.rs  test.rs
compiler/pernixc_builder/src/type_system/: diagnostic.rs
compiler/pernixc_builder/src/variance_map/: test.rs
compiler/pernixc_builder/src/variances/: test.rs
compiler/pernixc_builder/src/where_clause/: diagnostic.rs  test.rs
compiler/pernixc_builder/src/where_clause_check/: diagnostic.rs  test.rs
compiler/pernixc_codegen/: Cargo.toml
compiler/pernixc_codegen/resource/sample/: main.pnx
compiler/pernixc_codegen/src/: context.rs  diagnostic.rs  function.rs  generator.rs  lib.rs  module.rs  test.rs  type.rs  zst.rs
compiler/pernixc_codegen/src/function/: address.rs  drop.rs  instruction.rs  literal.rs
compiler/pernixc_codegen/src/module/: function.rs  tests.rs  ty.rs
compiler/pernixc_common/: Cargo.toml
compiler/pernixc_common/src/: lib.rs  printing.rs  source_file.rs
compiler/pernixc_common/src/source_file/: tests.rs
compiler/pernixc_component/: Cargo.toml
compiler/pernixc_component/src/: fields.rs  function_signature.rs  implementation.rs  implied_predicates.rs  late_bound.rs  lib.rs  serde.rs  type_alias.rs  variance_map.rs  variant.rs  where_clause.rs
compiler/pernixc_diagnostic/: Cargo.toml
compiler/pernixc_diagnostic/src/: lib.rs
compiler/pernixc_driver/: Cargo.toml
compiler/pernixc_driver/src/: argument.rs  lib.rs  lib2.rs  term.rs
compiler/pernixc_intrinsic/: Cargo.toml
compiler/pernixc_intrinsic/src/: lib.rs
compiler/pernixc_ir/: Cargo.toml
compiler/pernixc_ir/src/: address.rs  alloca.rs  binding.rs  control_flow_graph.rs  instruction.rs  lib.rs  model.rs  pattern.rs  scope.rs  value.rs
compiler/pernixc_ir/src/binding/: diagnostic.rs  expression.rs  finalize.rs  infer.rs  pattern.rs  stack.rs  statement.rs  test.rs
compiler/pernixc_ir/src/pattern/: diagnostic.rs
compiler/pernixc_ir/src/value/: literal.rs  register.rs
compiler/pernixc_lexical/: Cargo.toml
compiler/pernixc_lexical/src/: error.rs  errors.rs  kind.rs  lib.rs  token.rs  token_stream.rs  tree.rs
compiler/pernixc_lexical/src/kind/: arbitrary.rs
compiler/pernixc_lexical/src/token/: arbitrary.rs  (+5 more)
compiler/pernixc_lexical/test/: pernixc_lexical_test.rs  token.rs  token_stream.rs
compiler/pernixc_log/: Cargo.toml
compiler/pernixc_log/src/: formatting.rs  lib.rs
compiler/pernixc_memory_checker/: Cargo.toml
compiler/pernixc_memory_checker/src/: diagnostic.rs  lib.rs  simplify_drop.rs  state.rs
compiler/pernixc_parser/: Cargo.toml
compiler/pernixc_parser/src/: abstract_tree.rs  cache.rs  concrete_tree.rs  error.rs  expect.rs  from_node.rs  lib.rs  output.rs  parser.rs  state.rs
compiler/pernixc_print/: Cargo.toml
compiler/pernixc_print/src/: lib.rs
compiler/pernixc_query/: Cargo.toml
compiler/pernixc_query/src/: call_graph.rs  database.rs  executor.rs  key.rs  lib.rs  map.rs  reflector.rs  runtime.rs  serde.rs  test.rs
compiler/pernixc_query_base/: Cargo.toml
compiler/pernixc_query_base/src/: lib.rs  module.rs  symbol.rs
compiler/pernixc_query_derive/: Cargo.toml
compiler/pernixc_query_derive/src/: lib.rs
compiler/pernixc_resolution/: Cargo.toml
compiler/pernixc_resolution/src/: diagnostic.rs  lib.rs  qualified_identifier.rs  term.rs
compiler/pernixc_semantic/: Cargo.toml
compiler/pernixc_semantic/src/: arena.rs  binding.rs  cfg.rs  component.rs  constant.rs  control_flow_graph.rs  deserialization.rs  diagnostic.rs  entity.rs  error.rs  error2.rs  errors.rs  hir.rs  infer.rs  ir.rs  lib.rs  logic.rs  mir.rs  model.rs  pattern.rs  reflector.rs  semantic.rs  symbol.rs  table.rs  term.rs  test.rs  transitive_closure.rs  ty.rs  type_system.rs  unordered_pair.rs
compiler/pernixc_source/: Cargo.toml
compiler/pernixc_source/src/: lib.rs  tests.rs  utils.rs
compiler/pernixc_source_file/: Cargo.toml
compiler/pernixc_source_file/src/: lib.rs  map.rs  test.rs
compiler/pernixc_stable_type_id/: Cargo.toml
compiler/pernixc_stable_type_id/src/: lib.rs
compiler/pernixc_storage/: Cargo.toml
compiler/pernixc_storage/src/: lib.rs  serde.rs
(+2969 files in other folders)
