[workspace]
resolver = "2"
members = [
    "compiler/pernixc_base",
    "compiler/pernixc_lexical",
    "compiler/pernixc_syntax",
    "compiler/pernixc_tests",
    "compiler/pernixc_semantic",
    "compiler/pernixc_driver",
    "compiler/pernixc",
]

[workspace.dependencies]
enum-as-inner = "0.6.0"
thiserror = "1.0.40"
getset = "0.1.2"
proptest = "1.4.0"
lazy_static = "1.4.0"
strum = "0.26.1"
strum_macros = "0.26.1"
derive_more = "0.99.17"
colored = "2.0.0"
paste = "1.0.12"
tempfile = "3.5.0"
by_address = "1.1.0"
quickcheck = "1.0.3"
itertools = "0.12.0"
parking_lot = "0.12.1"
derive-new = "0.6.0"
memmap2 = "0.9.3"
ouroboros = "0.18.0"
take_mut = "0.2.2"
rayon = "1.8.0"
clap = { version = "4.4.0", features = ["derive"] }
bitflags = "2.4.1"
drain_filter_polyfill = "0.1.3"
typestate = "0.8.0"
enum_dispatch = "0.3.12"
tokio = { version = "1.35.1", features = ["full"] }

[workspace.package]
version = "0.1.0"
authors = ["Simmypeet"]
description = "The Pernix Programming Language Compiler"
edition = "2021"
rust-version = "1.75.0"

[workspace.lints.rust]
missing_docs = "deny"
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
missing_panics_doc = "allow"
