[package]
name = "pernixc_driver"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pernixc_source_file = { path = "../base/source_file" }
pernixc_diagnostic = { path = "../base/diagnostic" }
pernixc_handler = { path = "../base/handler" }
pernixc_target = { path = "../base/target" }
pernixc_query = { path = "../base/query" }
pernixc_corelib = { path = "../semantic/corelib" }
pernixc_lexical = { path = "../syntax/lexical" }
pernixc_serialize = { path = "../base/serialize/" }
pernixc_hash = { path = "../base/hash" }
pernixc_stable_type_id = { path = "../base/stable_type_id" }
pernixc_symbol = { path = "../semantic/symbol" }
pernixc_syntax = { path = "../syntax/syntax" }
pernixc_type_system = { path = "../semantic/type_system" }
pernixc_resolution = { path = "../semantic/resolution" }
pernixc_symbol_impl = { path = "../semantic/symbol_impl" }
pernixc_semantic_element_impl = { path = "../semantic/semantic_element_impl" }
pernixc_register = { path = "../base/register" }
pernixc_llvm = { path = "../codegen/llvm" }
clap = { workspace = true }
codespan-reporting = { workspace = true }
derive_more = { workspace = true }
indicatif = { workspace = true }
colored = { workspace = true }
atty = { workspace = true }
parking_lot = { workspace = true }
inkwell = { workspace = true }
enum-as-inner = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
