[package]
name = "pernixc_driver"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pernixc_source_file = { path = "../base/source_file" }
pernixc_diagnostic = { path = "../base/diagnostic" }
pernixc_handler = { path = "../base/handler" }
pernixc_target = { path = "../base/target" }
pernixc_hash = { path = "../base/hash" }
pernixc_corelib = { path = "../semantic/corelib" }
pernixc_symbol = { path = "../semantic/symbol" }
pernixc_symbol_impl = { path = "../semantic/symbol_impl" }
pernixc_check = { path = "../semantic/check" }
pernixc_llvm = { path = "../codegen/llvm" }
pernixc_qbice.path = "../base/qbice"
pernixc_source_file_impl.path = "../base/source_file_impl"
pernixc_lexical_impl.path = "../syntax/lexical_impl"
pernixc_syntax_impl.path = "../syntax/syntax_impl"
qbice.workspace = true
linkme.workspace = true
inkwell = { workspace = true }
tracing = { workspace = true }
annotate-snippets.workspace = true
ansi_term.workspace = true

[lints]
workspace = true
