[package]
name = "pernixc_e2e"
description = "end-to-end tests for Pernix compiler"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
build = "test/snapshot/build.rs"


[dev-dependencies]
assert_cmd = { workspace = true }
tempfile = { workspace = true }
insta = { workspace = true }
pernixc_driver = { path = "../driver" }
pernixc_target = { path = "../base/target/" }
clap = { workspace = true }
termcolor = { workspace = true }
tokio = { workspace = true }
test-generator = { workspace = true }
pretty_assertions = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }
stacker = { workspace = true }

[[test]]
name = "snapshot_e2e"
path = "test/snapshot/mod.rs"


[[test]]
name = "run_e2e"
path = "test/run/mod.rs"


[lints]
workspace = true
