[package]
name = "pernixc"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pernixc_driver = { path = "../driver" }
pernixc_source_file = { path = "../base/source_file" }
pernixc_serialize = { path = "../base/serialize" }
clap = { workspace = true }
backtrace = { workspace = true }
toml = { workspace = true }
codespan-reporting = { workspace = true }
mimalloc = { workspace = true }


[lints]
workspace = true
