[package]
name = "pernixc"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pernixc_driver = { path = "../driver" }
pernixc_source_file = { path = "../base/source_file" }
pernixc_target = { path = "../base/target" }
clap = { workspace = true }
backtrace = { workspace = true }
codespan-reporting = { workspace = true }
mimalloc = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-chrome = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
