[package]
name = "pernixc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pernix_lexer = { path = "../pernix_lexer" }
pernix_project = { path = "../pernix_project" }
pernix_parser = { path = "../pernix_parser" }
pernix_analyzer = { path = "../pernix_analyzer" }
pernix_codegen = { path = "../pernix_codegen" }
clap = { version = "4.0", features = ["derive"] }
llvm-sys = { package = "llvm-sys", version = "150" }
console = "0.15.2"
lazy_static = "1.4.0"
