[package]
name = "pernixc"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pernixc_driver = { path = "../pernixc_driver" }
clap = { workspace = true }
