[package]
name = "pernixc"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pernixc_driver = { path = "../pernixc_driver" }
pernixc_log = { path = "../pernixc_log" }
clap = { workspace = true }
backtrace = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }


[lints]
workspace = true
