[package]
name = "pernixc_arena"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
derive_more = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
