[package]
name = "pernixc_base"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { workspace = true }
getset = { workspace = true }
tempfile = { workspace = true }
memmap2 = { workspace = true }
ouroboros = { workspace = true }
thiserror = { workspace = true }
derive-new = { workspace = true }
parking_lot = { workspace = true }

[lints.rust]
missing_docs = "deny"
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
