[package]
name = "pernixc_base"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { workspace = true }
getset = { workspace = true }
tempfile = { workspace = true }
memmap2 = { workspace = true }
ouroboros = { workspace = true }
thiserror = { workspace = true }
derive-new = { workspace = true }
parking_lot = { workspace = true }
displaydoc = { workspace = true }

[lints]
workspace = true
