[package]
name = "pernixc_borrow_checker"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pernixc_type_system = { path = "../pernixc_type_system" }
pernixc_component = { path = "../pernixc_component" }
pernixc_arena = { path = "../pernixc_arena" }
pernixc_term = { path = "../pernixc_term" }
pernixc_table = { path = "../pernixc_table" }
pernixc_ir = { path = "../pernixc_ir" }
pernixc_abort = { path = "../pernixc_abort" }
pernixc_handler = { path = "../pernixc_handler" }
derive_more = { workspace = true }
enum-as-inner = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
