[package]
name = "pernixc_builder"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pernixc_term = { path = "../pernixc_term" }
pernixc_resolution = { path = "../pernixc_resolution" }
pernixc_source_file = { path = "../pernixc_source_file" }
pernixc_syntax = { path = "../pernixc_syntax" }
pernixc_table = { path = "../pernixc_table" }
pernixc_handler = { path = "../pernixc_handler" }
pernixc_diagnostic = { path = "../pernixc_diagnostic" }
pernixc_log = { path = "../pernixc_log" }
pernixc_arena = { path = "../pernixc_arena" }
pernixc_storage = { path = "../pernixc_storage" }
pernixc_component = { path = "../pernixc_component" }
pernixc_type_system = { path = "../pernixc_type_system" }
pernixc_ir = { path = "../pernixc_ir" }
thiserror = { workspace = true }
getset = { workspace = true }
rayon = { workspace = true }
derive-new = { workspace = true }
typed-builder = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
derive_more = { workspace = true }
enum-as-inner = { workspace = true }

[lints]
workspace = true
