[package]
name = "pernixc_codegen"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pernixc_semantic = { path = "../pernixc_semantic" }
pernixc_handler = { path = "../pernixc_handler" }
pernixc_ir = { path = "../pernixc_ir" }
pernixc_type_system = { path = "../pernixc_type_system" }
pernixc_abort = { path = "../pernixc_abort" }
pernixc_arena = { path = "../pernixc_arena" }
pernixc_diagnostic = { path = "../pernixc_diagnostic" }
pernixc_log = { path = "../pernixc_log" }
inkwell = { workspace = true }
derive-new = { workspace = true }
getset = { workspace = true }
take_mut = { workspace = true }
enum-as-inner = { workspace = true }
derive_more = { workspace = true }

[lints]
workspace = true
