[package]
name = "pernixc_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = { workspace = true }
thiserror = { workspace = true }
enum-as-inner = { workspace = true }
derive-new = { workspace = true }
colored = { workspace = true }
lazy_static = { workspace = true }
derive_more = { workspace = true }
