[package]
name = "pernixc_component"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
typetag = { workspace = true }
serde = { workspace = true }
erased-serde = { workspace = true }
dashmap = { workspace = true }
derive-new = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
