[package]
name = "pernixc_component"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pernixc_source_file = { path = "../pernixc_source_file" }
pernixc_table = { path = "../pernixc_table" }
pernixc_term = { path = "../pernixc_term" }
pernixc_arena = { path = "../pernixc_arena" }
serde = { workspace = true }

[lints]
workspace = true
