[package]
name = "pernixc_component"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pernixc_source_file = { path = "../pernixc_source_file" }
pernixc_semantic = { path = "../pernixc_semantic" }
pernixc_arena = { path = "../pernixc_arena" }
derive_more = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
