[package]
name = "pernixc_diagnostic"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pernixc_source_file = { path = "../pernixc_source_file" }
pernixc_log = { path = "../pernixc_log" }

[lints]
workspace = true
