[package]
name = "pernixc_driver"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
pernixc_source_file = { path = "../pernixc_source_file" }
pernixc_diagnostic = { path = "../pernixc_diagnostic" }
pernixc_handler = { path = "../pernixc_handler" }
pernixc_syntax = { path = "../pernixc_syntax" }
pernixc_semantic = { path = "../pernixc_semantic" }
pernixc_builder = { path = "../pernixc_builder" }
pernixc_codegen = { path = "../pernixc_codegen" }
pernixc_storage = { path = "../pernixc_storage" }
pernixc_lexical = { path = "../pernixc_lexical" }
derive_more = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
indicatif = { workspace = true }
parking_lot = { workspace = true }
inkwell = { workspace = true }
enum-as-inner = { workspace = true }

[lints]
workspace = true
