[package]
name = "pernixc_intrinsic"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pernixc_component = { path = "../pernixc_component" }
pernixc_term = { path = "../pernixc_term" }
pernixc_table = { path = "../pernixc_table" }
pernixc_arena = { path = "../pernixc_arena" }
strum = { workspace = true }

[lints]
workspace = true
