[package]
name = "pernixc_intrinsic"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pernixc_semantic = { path = "../pernixc_semantic" }
pernixc_arena = { path = "../pernixc_arena" }
strum = { workspace = true }

[lints]
workspace = true
