[package]
name = "pernixc_ir"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pernixc_transitive_closure = { path = "../pernixc_transitive_closure" }
pernixc_source_file = { path = "../pernixc_source_file" }
pernixc_arena = { path = "../pernixc_arena" }
pernixc_semantic = { path = "../pernixc_semantic" }
pernixc_type_system = { path = "../pernixc_type_system" }
pernixc_handler = { path = "../pernixc_handler" }
pernixc_diagnostic = { path = "../pernixc_diagnostic" }
pernixc_log = { path = "../pernixc_log" }
pernixc_syntax = { path = "../pernixc_syntax" }
pernixc_resolution = { path = "../pernixc_resolution" }
pernixc_lexical = { path = "../pernixc_lexical" }
pernixc_abort = { path = "../pernixc_abort" }
enum-as-inner = { workspace = true }
getset = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
bit-vec = { workspace = true }
drain_filter_polyfill = { workspace = true }

[dev-dependencies]
pernixc_builder = { path = "../pernixc_builder" }

[lints]
workspace = true
