[package]
name = "pernixc_lexical"
version = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pernixc_source_file = { path = "../pernixc_source_file" }
pernixc_diagnostic = { path = "../pernixc_diagnostic" }
pernixc_handler = { path = "../pernixc_handler" }
pernixc_log = { path = "../pernixc_log" }
getset = { workspace = true }
enum-as-inner = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
lazy_static = { workspace = true }
derive_more = { workspace = true }
derive-new = { workspace = true }
bimap = { workspace = true }
pernixc_tests = { path = "../pernixc_tests" }
proptest = { workspace = true }
displaydoc = { workspace = true }

[lints]
workspace = true
