[package]
name = "pernixc_lexical"
version = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
arbitrary = ["dep:proptest"]

[dependencies]
pernixc_source_file = { path = "../pernixc_source_file" }
pernixc_diagnostic = { path = "../pernixc_diagnostic" }
pernixc_handler = { path = "../pernixc_handler" }
pernixc_arena = { path = "../pernixc_arena" }
pernixc_diff = { path = "../pernixc_diff" }
pernixc_target = { path = "../pernixc_target" }
serde = { workspace = true }
codespan-reporting = { workspace = true }
getset = { workspace = true }
enum-as-inner = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
lazy_static = { workspace = true }
derive_more = { workspace = true }
bimap = { workspace = true }
pernixc_test_input = { path = "../pernixc_test_input" }
proptest = { workspace = true, optional = true }
derive-new = { workspace = true }
fnv = { workspace = true }
flexstr = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }


[lints]
workspace = true
