[package]
name = "pernixc_log"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pernixc_source_file = { path = "../pernixc_source_file" }
derive-new = { workspace = true }


[lints]
workspace = true
