[package]
name = "pernixc_memory_checker"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
pernixc_arena = { path = "../pernixc_arena" }
pernixc_semantic = { path = "../pernixc_semantic" }
pernixc_source_file = { path = "../pernixc_source_file" }
pernixc_type_system = { path = "../pernixc_type_system" }
pernixc_handler = { path = "../pernixc_handler" }
pernixc_diagnostic = { path = "../pernixc_diagnostic" }
pernixc_abort = { path = "../pernixc_abort" }
pernixc_type_of = { path = "../pernixc_type_of" }
enum-as-inner = { workspace = true }
take_mut = { workspace = true }
getset = { workspace = true }
thiserror = { workspace = true }
displaydoc = { workspace = true }

[dev-dependencies]
pernixc_builder = { path = "../pernixc_builder" }

[lints]
workspace = true
